# PicoCluster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
hbi/: CMakeLists.txt  hbi.c  hbi.h  hbi.pio  hbi.pio.h
master/: CMakeLists.txt  interface.c  interface.h  master.c
master/subProgram/: CMakeLists.txt  blink.c  custom_linker.ld
slave/: CMakeLists.txt  slave.c  slave.h
